--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -4,7 +4,7 @@ Each script can be manipulated on his own, you could therefore install dependenc
 General Dependencies:
 ====================
 
-	python3, python3-pip
+	python3 python3-pip
 
 
 Dependencies for import.py:
@@ -13,7 +13,7 @@ Dependencies for import.py:
 
 Dependencies for topics.py:
 ===========================
-	pip3 install gensim, nltk
+	pip3 install gensim nltk
 
 	To get appropriate tokenizer, you need to download punkt stemmer (http://www.nltk.org/_modules/nltk/tokenize/punkt.html):
 	In a shell:
